--- a/angular/index.html
+++ b/angular/index.html
@@ -12,11 +12,12 @@
 <script src="../node_modules/angular-route/angular-route.js"></script>
 <script src="../node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script src="../node_modules/x2js/x2js.js"></script>
-<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
 <script src="app/components/file-input.directive.js" type="text/javascript"></script>
 <script src="app/setup/location-selector.controller.js" type="text/javascript"></script>
 <script src="app/main/main.controller.js" type="text/javascript"></script>
 <script src="app/services/language-selector.service.js" type="text/javascript"></script>
+<script src="app/services/xml.service.js" type="text/javascript"></script>
 </body>
 </html>
