--- a/angular/app/setup/project-type.html
+++ b/angular/app/setup/project-type.html
@@ -5,8 +5,11 @@
     </div>
     <h2 class="text-center">Select your Project Type:</h2>
 
-    <div>
-
+    <div class="row" ng-repeat="type in vm.types">
+        <div class="col-md-5">
+            <h3>{{type.name}}</h3>
+            <img ng-src="{{type.logo}}" alt="{{type.alt}}" class="img-rounded" ng-click="setType(type)"/>
+        </div>
     </div>
 </div>
 <div class="container-fluid footer" id="footer">
