--- a/angular/app/setup/location-selector.html
+++ b/angular/app/setup/location-selector.html
@@ -1,8 +1,9 @@
 <div class="container">
     <div class="alert alert-warning alert-dismissible" role="alert" ng-repeat="alert in vm.alerts">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>{{alert.type}}</strong> {{alert.message}}
-</div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <strong>{{alert.type}}</strong> {{alert.message}}
+    </div>
     <h2 class="text-center">Select your Project location and Languages:</h2>
     <form class="form-horizontal">
         <div class="form-group">
