--- a/angular/index.html
+++ b/angular/index.html
@@ -16,6 +16,7 @@
 <script src="app/app.js" type="text/javascript"></script>
 <script src="app/components/file-input.directive.js" type="text/javascript"></script>
 <script src="app/setup/location-selector.controller.js" type="text/javascript"></script>
+<script src="app/setup/project-type.controller.js" type="text/javascript"></script>
 <script src="app/main/main.controller.js" type="text/javascript"></script>
 <script src="app/services/language-selector.service.js" type="text/javascript"></script>
 <script src="app/services/xml.service.js" type="text/javascript"></script>
