--- a/angular/index.html
+++ b/angular/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>AISTT</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/angular-bootstrap-scrolling-tabs/scrolling-tabs.min.css">
+    <link rel="stylesheet" href="../node_modules/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" href="content/styles/main.css">
+    <script>window.$ = window.jQuery = require('../node_modules/jquery/dist/jquery.min');</script>
 </head>
 <body>
 <div ng-view class="wrap"></div>
@@ -12,12 +15,15 @@
 <script src="../node_modules/angular-route/angular-route.js"></script>
 <script src="../node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script src="../node_modules/x2js/x2js.js"></script>
-<script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
 <script src="app/components/file-input.directive.js" type="text/javascript"></script>
 <script src="app/setup/location-selector.controller.js" type="text/javascript"></script>
+<script src="../node_modules/angular-touch/angular-touch.min.js" type="text/javascript"></script>
+<script src="../node_modules/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+<script src="../node_modules/angular-ui-grid/ui-grid.min.js"></script>
 <script src="app/main/main.controller.js" type="text/javascript"></script>
 <script src="app/services/language-selector.service.js" type="text/javascript"></script>
 <script src="app/services/xml.service.js" type="text/javascript"></script>
+
 </body>
 </html>
